--- a/app/assets/stylesheets/mobile/vote.scss
+++ b/app/assets/stylesheets/mobile/vote.scss
@@ -330,10 +330,12 @@ body.mobile-pages-vote_share {
 
     .user-liked-content {
       .idols-list {
+        height: 261px;
         padding: 0 14px;
         margin-top: 10px;
 
         .item {
+          height: 87px;
           padding: 12px 0;
           border-bottom: 1px solid #ffeacc;
 
