refs:add hot_kols pages

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -129,6 +129,9 @@
               <%= link_to t('kol_management.all_kols'), marketing_dashboard_kols_path %>
             </li>
             <li>
+              <%= link_to "网红KOL", hot_kols_marketing_dashboard_kols_path %>
+            </li>
+            <li>
               <%= link_to t('kol_management.blocked_kols'), banned_marketing_dashboard_kols_path %>
             </li>
             <li>
