update vote partials: unstart && start

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -428,6 +428,9 @@
             <li>
               <%= link_to "第三方价格配置", marketing_dashboard_utilities_admintag_strategies_path %>
             </li>
+            <li>
+              <%= link_to "网红投票活动开关", vote_switch_marketing_dashboard_utilities_redis_extends_path %>
+            </li>
           </ul>
         </li>
         <% end %>
