--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -1,6 +1,7 @@
 @import 'mobile/mixins/colors';
 @import 'mobile/mixins/variables';
 @import 'mobile/mixins/mixins';
+@import 'mobile/plugins/dropload';
 @import 'mobile/default';
 @import 'mobile/invite';
 @import 'mobile/blockchain_intro';
