--- a/app/views/pages/votes/_my.html.erb
+++ b/app/views/pages/votes/_my.html.erb
@@ -111,7 +111,7 @@
   </div>
 </div>
 
-<!-- <div class="vote-success-alert">
+<div class="vote-success-alert" id="vote_success_alert">
   <div class="mask"></div>
   <div class="alert-container">
     <div class="inner">
@@ -125,4 +125,4 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
