--- a/app/views/pages/votes/_my.html.erb
+++ b/app/views/pages/votes/_my.html.erb
@@ -28,7 +28,7 @@
         <% else %>
           <div class="inner sign-tips">
             <div class="tips">你还没有报名参加“明日之星” 网红评选大赛哦</div>
-            <button type="button" class="btn sign-btn" id="sign_btn">我要报名</button>
+            <button type="button" class="btn sign-btn" id="new_sign_btn">我要报名</button>
           </div>
         <% end %>
       </div>
