--- a/app/assets/stylesheets/mobile/vote.scss
+++ b/app/assets/stylesheets/mobile/vote.scss
@@ -118,6 +118,21 @@ body.mobile-pages-vote, body.mobile-pages-vote_share {
       background: rgba(255, 202, 129, 1);
     }
 
+    .sign-btn {
+      position: absolute;
+      @include center(x);
+      top: -24px;
+      width: 128px;
+      height: 48px;
+      border-radius: 24px;
+      border: 1px solid #fff;
+      text-align: center;
+      font-size: 1.9rem;
+      font-weight: 500;
+      color: #000;
+      background: rgba(255, 202, 129, 1);
+    }
+
     .intro-box {
       margin-bottom: 24px;
 
@@ -368,9 +383,11 @@ body.mobile-pages-vote, body.mobile-pages-vote_share {
               display: block;
               width: 64px;
               height: 28px;
+              line-height: 26px;
               margin-bottom: 6px;
               border: 1px solid #fff;
               border-radius: 14px;
+              text-align: center;
               font-size: 1.4rem;
               font-weight: 400;
               color: #fff;
