--- a/app/assets/stylesheets/mobile/vote.scss
+++ b/app/assets/stylesheets/mobile/vote.scss
@@ -272,6 +272,13 @@ body.mobile-pages-vote, body.mobile-pages-vote_share {
         border: 1px solid #fff;
         border-radius: 50%;
         overflow: hidden;
+
+        .avatar-img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+        }
+
       }
 
       .name {
@@ -363,6 +370,7 @@ body.mobile-pages-vote, body.mobile-pages-vote_share {
             .avatar-img {
               width: 40px;
               height: 40px;
+              border-radius: 50%;
             }
 
           }
