--- a/app/views/pages/vote_share.html.erb
+++ b/app/views/pages/vote_share.html.erb
@@ -43,7 +43,7 @@
     <div class="panel-box">
       <div class="panel-inner">
         <div class="success-title">投票成功！</div>
-        <div class="success-desc mt10">下载Robin8 APP，继续为你的爱豆</div>
+        <div class="success-desc mt10">下载Robin8 APP，继续为你的爱豆投票吧</div>
         <a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.robin8.rb" class="button btn-block download-btn mt30">下载APP</a>
       </div>
     </div>
