admin creations tenders list

--- a/app/views/marketing_dashboard/creations/_base_info.html.erb
+++ b/app/views/marketing_dashboard/creations/_base_info.html.erb
@@ -11,7 +11,7 @@
   </tr>
   <tr>
     <td>预算</td>
-    <td><%= @creation.pre_amount %></td>
+    <td>¥<%= @creation.pre_amount %></td>
   </tr>
   <tr>
     <td>预计招募人数</td>
@@ -35,6 +35,10 @@
         </tr>
       </table>
     </td>
+  </tr>
+  <tr>
+    <td>注意事项</td>
+    <td><%= @creation.notice %></td>
   </tr>
   <tr>
   	<td>已选择</td>
