update creation targets_hash

--- a/app/views/marketing_dashboard/creations/_base_info.html.erb
+++ b/app/views/marketing_dashboard/creations/_base_info.html.erb
@@ -23,7 +23,7 @@
     	<table>
         <tr>
           <td width="60px;">标签：</td>
-					<td><%= @creation.targets_hash[:category] %></td>
+					<td><%= @creation.targets_hash[:industries] %></td>
 				</tr>
       	<tr>
           <td width="60px;">价格：</td>
