end add apis by search engine

--- a/app/views/marketing_dashboard/public_wechat_accounts/index.html.erb
+++ b/app/views/marketing_dashboard/public_wechat_accounts/index.html.erb
@@ -47,6 +47,7 @@
       <th>ID</th>
       <th>kol ID</th>
       <th>联系方式</th>
+      <th>公众号名称</th>
       <th>审核状态</th>
       <th>单图文报价</th>
       <th>多图文头条报价</th>
@@ -69,6 +70,7 @@
         <td><%= link_to t.id, marketing_dashboard_public_wechat_account_path(t) %></td>
         <td><%= t.kol_id %></td>
         <td><%= t.mobile_number %></td>
+        <td><%= t.nickname %></td>
         <td><%= PublicWechatAccount::STATUS[t.status] %></td>
         <td><%= t.price %></td>
         <td><%= t.mult_price %></td>
